--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
         
         # 监听请求路径
         location / {
-            root   /usr/local/home/cicd;
+            root   /usr/projects/test;
             index  index.html index.htm;
         }
 
