--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       #~ ./nginx.conf为宿主机目录, /etc/nginx为容器目录
       - ./nginx.conf:/etc/nginx/nginx.conf #挂载nginx配置
       #~ ./dist 为宿主机 build 后的dist目录, /usr/src/app为容器目录,
-      - ./dist:/usr/local/home/cicd/ #挂载项目
+      - ./dist:/usr/projects/test #挂载项目
     privileged: true
