--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  test: #项目的service name
-    container_name: 'test-container' #容器名称
+  mobile-web-best-practice: #项目的service name
+    container_name: 'mobile-web-best-practice-container' #容器名称
     image: nginx #指定镜像
     restart: always
     ports:
@@ -10,5 +10,5 @@ services:
       #~ ./nginx.conf为宿主机目录, /etc/nginx为容器目录
       - ./nginx.conf:/etc/nginx/nginx.conf #挂载nginx配置
       #~ ./dist 为宿主机 build 后的dist目录, /usr/src/app为容器目录,
-      - ./dist:/usr/projects/test #挂载项目
+      - ./dist:/usr/share/nginx/html/ #挂载项目
     privileged: true
