--- a/nginx.conf
+++ b/nginx.conf
@@ -1,56 +1,38 @@
-user  nginx;
-worker_processes  1;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
-
+#user nobody;
+worker_processes 1;
 events {
-    worker_connections  1024;
+  worker_connections 1024;
 }
-
-
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    gzip  on;
-    gzip_types text/plain application/javascript text/css;
-
-    # 虚拟主机server块
-    server {
-        # 端口
-        listen   80;
-        # 匹配请求中的host值
-        server_name  localhost;
-        
-        # 监听请求路径
-        location / {
-            root   /usr/projects/test;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-
+  include    mime.types;
+  default_type application/octet-stream;
+  sendfile    on;
+  #tcp_nopush   on;
+  #keepalive_timeout 0;
+  keepalive_timeout 65;
+  #用于对前端资源进行 gzip 压缩
+  #gzip on;
+  gzip on;
+  gzip_min_length 5k;
+  gzip_buffers   4 16k;
+  #gzip_http_version 1.0;
+  gzip_comp_level 3;
+  gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
+  gzip_vary on;
+  server {
+    listen 80;
+    server_name localhost;
+    #前端项目
+    location / {
+      index index.html index.htm;  #添加属性。
+      root /usr/share/nginx/html;  #站点目录
+      # 所有静态资源均指向 /index.html
+      try_files $uri $uri/ /index.html;
     }
 
-    include /etc/nginx/conf.d/*.conf;
+    error_page  500 502 503 504 /50x.html;
+    location = /50x.html {
+      root  /usr/share/nginx/html;
+    }
+  }
 }
