--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,10 +39,10 @@ jobs:
                   # scp参数
                   ARGS: '-avzr --delete'
                   # 源目录
-                  SOURCE: 'dist'
+                  SOURCE: 'cms.panjingyi.top'
                   # 服务器ip：换成你的服务器IP
                   REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
                   # 用户
                   REMOTE_USER: 'root'
                   # 目标地址
-                  TARGET: '/www/wwwroot/cms.panjingyi.top'
+                  TARGET: '/www/wwwroot'
