--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,12 +15,12 @@ jobs:
               # 使用action库  actions/checkout获取源码
               uses: actions/checkout@master
 
-            # 安装Node10
-            - name: 安装node.js
-              # 使用action库  actions/setup-node安装node
-              uses: actions/setup-node@v2.5.1
-              with:
-                  node-version: 14.0.0
+            # # 安装Node10
+            # - name: 安装node.js
+            # # 使用action库  actions/setup-node安装node
+            #   uses: actions/setup-node@v2.5.1
+            #   with:
+            #       node-version: 14.0.0
 
             # 安装依赖
             - name: 安装依赖
