--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,19 +30,30 @@ jobs:
             - name: 打包
               run: npm run build
 
-            # 上传阿里云
+            # # 上传阿里云
+            # - name: 发布到阿里云
+            #   uses: easingthemes/ssh-deploy@v2.1.1
+            #   env:
+            #       # 私钥
+            #       SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+            #       # scp参数
+            #       ARGS: '-avzr --delete'
+            #       # 服务器ip：换成你的服务器IP
+            #       REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+            #       # 用户
+            #       REMOTE_USER: 'root'
+            #       # 对应我们项目build的文件夹路径
+            #       local_path: './dist/*' 
+            #       # 目标地址
+            #       TARGET: '/www/wwwroot/cms.panjingyi.top'
+            
+            # 利用action把dist好的文件上传到服务器/www/wwwroot/cms.panjingyi.top路径下,需要确认此目录已在服务端创建
             - name: 发布到阿里云
-              uses: easingthemes/ssh-deploy@v2.1.1
-              env:
-                  # 私钥
-                  SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-                  # scp参数
-                  ARGS: '-avzr --delete'
-                  # 服务器ip：换成你的服务器IP
-                  REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-                  # 用户
-                  REMOTE_USER: 'root'
-                  # 对应我们项目build的文件夹路径
-                  local_path: './dist/*' 
-                  # 目标地址
-                  TARGET: '/www/wwwroot/cms.panjingyi.top'
+              uses: wlixcc/SFTP-Deploy-Action@v1.0
+              with:
+                username: 'root' #ssh user name
+                server: '${{ secrets.REMOTE_HOST }}' #引用之前创建好的secret
+                ssh_private_key: ${{ secrets.PRIVATE_KEY }} #引用之前创建好的secret
+                local_path: './dist/*' # 对应我们项目build的文件夹路径
+                remote_path: '/www/wwwroot/cms.panjingyi.top'
+                  
